Opened 13 months ago

Closed 7 months ago

#17633 closed bug (fixed)

New boot-failure lately (somewhere above hrev55916)

Reported by: tojoko Owned by: nobody
Priority: blocker Milestone: R1/beta4
Component: Drivers/Graphics/VESA Version:
Keywords: Cc:
Blocked By: Blocking: #17644, #17658
Platform: x86

Description

Boot failure since the pre-last update.

Attachments (8)

syslog.old (512.1 KB ) - added by tojoko 13 months ago.
first sight
previous_syslog (107.8 KB ) - added by tojoko 13 months ago.
latest version
previous_syslog.2 (81.5 KB ) - added by tojoko 13 months ago.
and another one (still the same)
previous_syslog.3 (48.6 KB ) - added by tojoko 12 months ago.
i hope this helps
syslog (95.3 KB ) - added by tojoko 12 months ago.
... or that at least (two different errors)
es1370.log (109 bytes ) - added by tojoko 7 months ago.
hrev56350
syslog.2 (147.5 KB ) - added by tojoko 7 months ago.
running with sd card plugged out
syslog.3 (365.7 KB ) - added by tojoko 7 months ago.
Don't know, if that is any better.

Download all attachments as: .zip

Change History (20)

by tojoko, 13 months ago

Attachment: syslog.old added

first sight

by tojoko, 13 months ago

Attachment: previous_syslog added

latest version

comment:1 by diver, 13 months ago

Component: - GeneralDrivers/Graphics/VESA

Possibly related to recent vesa live patching.

vesa: patched custom mode in 5 locations
vesa: video mode patching failed!

comment:2 by waddlesplash, 13 months ago

Milestone: UnscheduledR1/beta4
Priority: criticalblocker

by tojoko, 13 months ago

Attachment: previous_syslog.2 added

and another one (still the same)

in reply to:  1 comment:3 by pulkomandy, 13 months ago

So there's a memcpy to a NULL address:

1854	vm_page_fault: vm_soft_fault returned error 'Bad address' on fault at 0x0, ip 0x60ea7134, write 1, user 1, exec 0, thread 0x1a4
1855	debug_server: Thread 420 entered the debugger: Segment violation
1856	stack trace, current PC 0x60ea7134  commpage_memcpy + 0x1c:
1857	  (0x71fe658c)  0x2a3743e  _CopyBackToFront__11HWInterfaceR7BRegion + 0xba
1858	  (0x71fe65fc)  0x2a16384  _CopyBackToFront__21AccelerantHWInterfaceR7BRegion + 0xdc
1859	  (0x71fe664c)  0x2a372b5  CopyBackToFront__11HWInterfaceRC5BRect + 0x28d
1860	  (0x71fe670c)  0x2a3701c  Invalidate__11HWInterfaceRC5BRect + 0x58
1861	  (0x71fe673c)  0x2a36fab  InvalidateRegion__11HWInterfaceRC7BRegion + 0x5b
1862	  (0x71fe6788)  0x2a2ee3d  FillRegion__13DrawingEngineR7BRegionRC9rgb_color + 0x1f5
1863	  (0x71fe6818)  0x29a4684  _SetBackground__7DesktopR7BRegion + 0xe4
1864	  (0x71fe6878)  0x299c4e3  Init__7Desktop + 0x40f
1865	  (0x71fe6908)  0x2992c8c  _CreateDesktop__9AppServerUiPCc + 0xc8
1866	  (0x71fe6958)  0x2992ae4  MessageReceived__9AppServerP8BMessage + 0xc8
1867	  (0x71fe69d8)  0x190d3e7  DispatchMessage__7BLooperP8BMessageP8BHandler + 0x5b
1868	  (0x71fe6a08)  0x1902829  DispatchMessage__12BApplicationP8BMessageP8BHandler + 0x4e9
1869	  (0x71fe6c08)  0x190f151  task_looper__7BLooper + 0x205
1870	  (0x71fe6c48)  0x190dca9  Loop__7BLooper + 0x65
1871	  (0x71fe6c88)  0x19011a2  Run__12BApplication + 0x2a
1872	  (0x71fe6cb8)  0x2993074  main + 0x8c
1873	  (0x71fe6cf8)  0x2991d5f  _start + 0x5b
1874	  (0x71fe6d28)  0xd56270  runtime_loader + 0x134

Probably some missing checks so we don't just crash in that case?

Then the next question is indeed why there is no framebuffer. Indeed the VESA patching seems to have worked (it says "5 locations patched") but then calling the patched BIOS does not work, which behaves the same as failing to set a video mode. In that case, instead of crashing, app_server should default to a failsafe video mode that doesn't need patching (1024x768 maybe).

comment:4 by waddlesplash, 12 months ago

Blocking: 17644 added

comment:5 by waddlesplash, 12 months ago

Blocking: 17658 added

comment:6 by pulkomandy, 12 months ago

Can you try this version?

https://review.haiku-os.org/c/haiku/+/5170

I made one change and added some extra logs, so a new syslog with this version will give us some more info about what is happening.

Thanks and sorry for the delay on this.

by tojoko, 12 months ago

Attachment: previous_syslog.3 added

i hope this helps

by tojoko, 12 months ago

Attachment: syslog added

... or that at least (two different errors)

comment:7 by pulkomandy, 12 months ago

1440	KERN: vesa: detected Intel BIOS
1441	KERN: vesa: vesa_init() completed successfully!
1442	KERN: vesa: acc: vesa.accelerant
1443	KERN: vesa_propose_display_mode()

1539	KERN: vesa_get_edid_info()
1540	KERN: app_server: Could not set configured video mode, defaulting to preferred mode
1541	KERN: vesa_get_edid_info()
1542	KERN: vesa_accelerant_mode_count() = 57
1543	KERN: vesa_get_mode_info()
1544	KERN: vesa_set_display_mode(1280x720)
1545	KERN: vesa_propose_display_mode()
1546	KERN: vesa: patched custom mode in 5 locations
1547	KERN: vesa: custom mode resolution 640x480 succesfully patched at index 118

1567	KERN: vesa_get_frame_buffer_config()
1568	KERN: vm_soft_fault: va 0xdea4b000 not covered by area in address space
1569	KERN: vm_page_fault: vm_soft_fault returned error 'Bad address' on fault at 0xdea4b000, ip 0x60f15134, write 1, user 1, exec 0, thread 0x1a0
1570	KERN: debug_server: Thread 416 entered the debugger: Segment violation
1571	KERN: stack trace, current PC 0x60f15134  commpage_memcpy + 0x1c:
1572	KERN:   (0x715bbe8c)  0x20a6452  _CopyBackToFront__11HWInterfaceR7BRegion + 0xba
1573	KERN:   (0x715bbefc)  0x2085398  _CopyBackToFront__21AccelerantHWInterfaceR7BRegion + 0xdc
1574	KERN:   (0x715bbf4c)  0x20a62c9  CopyBackToFront__11HWInterfaceRC5BRect + 0x28d
1575	KERN:   (0x715bc00c)  0x20a6030  Invalidate__11HWInterfaceRC5BRect + 0x58
1576	KERN:   (0x715bc03c)  0x20a5fbf  InvalidateRegion__11HWInterfaceRC7BRegion + 0x5b
1577	KERN:   (0x715bc088)  0x209de51  FillRegion__13DrawingEngineR7BRegionRC9rgb_color + 0x1f5
1578	KERN:   (0x715bc118)  0x2013654  _SetBackground__7DesktopR7BRegion + 0xe4
1579	KERN:   (0x715bc178)  0x200b4b3  Init__7Desktop + 0x40f
1580	KERN:   (0x715bc208)  0x2001c5c  _CreateDesktop__9AppServerUiPCc + 0xc8
1581	KERN:   (0x715bc258)  0x2001ab4  MessageReceived__9AppServerP8BMessage + 0xc8
1582	KERN:   (0x715bc2d8)  0x62dcef  DispatchMessage__7BLooperP8BMessageP8BHandler + 0x5b
1583	KERN:   (0x715bc308)  0x623131  DispatchMessage__12BApplicationP8BMessageP8BHandler + 0x4e9
1584	KERN:   (0x715bc508)  0x62fa59  task_looper__7BLooper + 0x205
1585	KERN:   (0x715bc548)  0x62e5b1  Loop__7BLooper + 0x65
1586	KERN:   (0x715bc588)  0x621aaa  Run__12BApplication + 0x2a
1587	KERN:   (0x715bc5b8)  0x2002044  main + 0x8c
1588	KERN:   (0x715bc5f8)  0x2000d2f  _start + 0x5b
1589	KERN:   (0x715bc628)  0xaa8130  runtime_loader + 0x134

I am a bit confused as to why the mode is initially 1280x720, but gets downgraded to 640x480? I will try to review the code and see where this can happen (or maybe I'll need even more logs...)

comment:8 by pulkomandy, 8 months ago

comment:9 by korli, 7 months ago

Please check with hrev56348 or newer.

by tojoko, 7 months ago

Attachment: es1370.log added

comment:10 by tojoko, 7 months ago

sorry for the delay - had trouble findin a free space in my tt as well as on a usb stick

  • still doesn't work with sd-card plugged in, tested on hrev56350

by tojoko, 7 months ago

Attachment: syslog.2 added

running with sd card plugged out

by tojoko, 7 months ago

Attachment: syslog.3 added

Don't know, if that is any better.

in reply to:  8 comment:11 by tojoko, 7 months ago

Replying to pulkomandy:

Hello, can you try with https://review.haiku-os.org/c/haiku/+/5499 ?

Hi,

sorry, while your version works fine, when the sc card is removed, it doesn't boot and neither gives me any usefull bug-report it the sd-card is plugged in.

any further suggestions?

comment:12 by waddlesplash, 7 months ago

Resolution: fixed
Status: newclosed

So this problem is then fixed, the remaining issue is just #17031.

Note: See TracTickets for help on using tickets.