[WIP] Fixes and extra tracing for #17633

Not sure what is happening there exactly, so I need a few extra traces.